fix(front): #1591 send correct number
- Configure plugin to send the international number to Salesforce.
- Resize form so it does not get too large on widescreen.


Former-commit-id: 8ffed68d3144b085ca33c6dfd983f2bdc8a69479

--- a/theme/2014/static/scss/pages.scss
+++ b/theme/2014/static/scss/pages.scss
@@ -143,6 +143,10 @@ $white: rgba(255, 255, 255, 1);
       cursor: pointer;
     }
   }
+
+  .intl-tel-input {
+    display: block;
+  }
 }
 
 @media (min-width: 480px) {
@@ -162,6 +166,11 @@ $white: rgba(255, 255, 255, 1);
         display: inline;
       }
     }
+  }
+
+  .salesforce {
+    margin: auto;
+    max-width: 400px;
   }
 }
 
